# mantis-ta

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Plans.md  README.md  SECURITY.md  SPEC.md  TODO.md  harness.toml
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: security_vulnerability.md
.github/workflows/: ci.yml  publish.yml
benches/: backtest.rs  batch_a_indicators.rs  batch_b_indicators.rs  common.rs  indicators.rs  strategy_eval.rs
benches/data/: BENCHMARK_RESULTS.md  backtest_10_instruments_estimates.json  backtest_1_instrument_estimates.json
benches/data/talib_reference/: adx_reference.json  cci_reference.json  dema_reference.json  roc_reference.json  stddev_reference.json  tema_reference.json  williams_r_reference.json  wma_reference.json
docs/: research-backtest-rigor.md
examples/: backtest_momentum.rs  basic_indicators.rs  custom_indicator.rs  golden_cross_strategy.rs  streaming_ema.rs
fixtures/: generate_ad_reference.py  generate_donchian_reference.py  generate_mfi_reference.py  generate_references.py  generate_sar_reference.py
fixtures/market_data/: README.md  aapl_daily_2y.csv  ad_parity_synthetic.csv  eurusd_1h_1y.csv
fixtures/reference/: README.md  ad.json  atr_14.json  bb_lower.json  bb_middle.json  bb_upper.json  donchian_lower_20.json  donchian_middle_20.json  donchian_upper_20.json  ema_10.json  ema_100.json  ema_20.json  ema_200.json  ema_5.json  ema_50.json  macd_hist.json  macd_line.json  macd_signal.json  mfi_14.json  obv.json  pivot_points.json  rsi_14.json  rsi_21.json  rsi_7.json  sar.json  sma_10.json  sma_100.json  sma_20.json  sma_200.json  sma_5.json  sma_50.json  stoch_d.json  stoch_k.json  volume_sma_20.json
src/: lib.rs  prelude.rs
src/backtest/: mod.rs
src/indicators/: mod.rs  obv.rs
src/indicators/momentum/: cci.rs  mfi.rs  mod.rs  roc.rs  rsi.rs  stochastic.rs  williams_r.rs
src/indicators/support_resistance/: donchian.rs  mod.rs  pivot_points.rs
src/indicators/trend/: adx.rs  dema.rs  ema.rs  ichimoku.rs  macd.rs  mod.rs  parabolic_sar.rs  sma.rs  tema.rs  wma.rs
src/indicators/volatility/: atr.rs  bollinger.rs  keltner.rs  mod.rs  stddev.rs
src/indicators/volume/: accum_dist.rs  mod.rs  volume_sma.rs  vwap.rs
src/strategy/: evaluator.rs  indicator_ref.rs  mod.rs  types.rs
src/types/: mod.rs
src/utils/: crossover.rs  math.rs  mod.rs  ringbuf.rs
tests/: batch_a_verification.rs  batch_b_verification.rs  mod.rs  property_tests.rs
tests/common/: mod.rs
tests/indicator_verification/: mod.rs
