[package]
name = "mantis-ta"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["MANTIS Contributors"]
description = "Composable technical analysis and strategy engine for Rust"
documentation = "https://docs.rs/mantis-ta"
repository = "https://github.com/SHA888/mantis-ta"
keywords = ["technical-analysis", "trading", "finance", "indicators", "backtesting"]
categories = ["algorithms", "mathematics", "finance"]
license = "MIT OR Apache-2.0"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
ndarray = ["dep:ndarray"]
simd = []
full-indicators = []
strategy = []
backtest = ["strategy"]
all = ["serde", "ndarray", "simd", "full-indicators", "strategy", "backtest"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
ndarray = { version = "0.16", optional = true }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
csv = "1"
serde_json = "1"
rand = "0.8"

[[bench]]
name = "indicators"
harness = false

[[bench]]
name = "strategy_eval"
harness = false

[[bench]]
name = "backtest"
harness = false
